fixing pop-up title issue on mobile devices

--- a/css/app.css
+++ b/css/app.css
@@ -208,4 +208,7 @@ button:hover {
     display: flex;
     flex-direction: column;
   }
+  .popup .title {
+    padding-bottom: 20px;
+  }
 }
